--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# spiderorchid
+# spiderorchid  <img src="man/figures/spiderorchid-hex.png" align="right" width = 150 />
 
 <!-- badges: start -->
 <!-- badges: end -->
