--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(
 # spiderorchid  <img src="man/figures/spiderorchid-hex.png" align="right" width = 150 />
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/numbats/spiderorchid/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/numbats/spiderorchid/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 **Download and wrangle publication data for Monash EBS academic staff**
@@ -75,7 +74,7 @@ need to authenticate with a 2-legged OAuth. Follow the instructions at
 <https://info.orcid.org/register-a-client-application-production-member-api/>.
 To avoid having to do this in each session, store the token obtained from
 `orcid_auth()` in your `.Renviron` file by running `usethis::edit_r_environ()`.
-It should be of the form \code{ORCID_TOKEN=<your token>}.
+It should be of the form `ORCID_TOKEN=<your token>`.
 
 
 ```{r}
